--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -64,7 +64,7 @@
     align-items: center;
     z-index: 7;
     border-radius: 80%;
-    background-image: url('M:/webdevelopment/projects/portfolio/src/assets/images/hero2.jpg');
+    background-image: url('M:/portfolio/Portfolio/src/assets/images/hero2.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -130,6 +130,6 @@
         background-position: center;
         background-size: cover;
         border-radius: 50%;
-        width: 50vw;
+        width: 50%;
     }
 }
